Many issues addressed just to get logos working
